# eng-math-2

./: Ch09_01.ipynb  Ch09_02.ipynb  Ch09_03.ipynb  Ch09_04.ipynb  Ch09_05.ipynb  Ch09_06.ipynb  Ch09_07.ipynb  Ch09_08.ipynb  Ch09_09.ipynb  Ch09_12.ipynb  Ch12_01.ipynb  Ch12_02.ipynb  Ch12_03.ipynb  Ch13_01.ipynb  Ch13_03.ipynb  Ch13_04.ipynb  README.md  Untitled.ipynb  pyproject.toml  requirements.txt
.github/workflows/: conda_env_test.yml
utils/: add_colab_main_buttons.py  find_in_notebook_files.py
utils/tests/: test_find_in_nb_files.py
