[project]
name = "eng-math-2"
version = "0.1.0"
description = "Visualzing Prof. Zill's Advancded Engineering Mathematics with Python"
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "matplotlib==3.8.0",
    "notebook==6.5.5",
    "numpy==1.26.4",
    "pytest==8.3.4",
    "pytest-xdist",
    "requests==2.32.3",
    "scipy==1.13.1",
    "sympy==1.13.1",
]
